## Process this file with automake to produce Makefile.in

EXTRA_DIST = animation.dia animedit.lyx animedit.ps animedit.txt charedit.lyx \
dlgedit.lyx dlgedit_debug.ps dlgedit_edit.ps dlgedit_main.ps dlgedit_run.ps \
event.lyx gfx_global.dia graphic_system.lyx graphic_system.ps \
graphic_system.txt image.dia image.eps input.lyx interpreter.lyx items.txt \
map.lyx screen.dia step1.ps step2.ps step3.ps step4.ps window.lyx window.ps \
window.txt
